exports[`RangeInput applies translations 1`] = `
<form
  className="root"
  onSubmit={[Function anonymous]}>
  <label
    className="labelMin">
    <input
      className="inputMin"
      onChange={[Function onChange]}
      type="number"
      value={0} />
  </label>
  <span
    className="separator">
    SEPARATOR
  </span>
  <label
    className="labelMax">
    <input
      className="inputMax"
      onChange={[Function onChange]}
      type="number"
      value={100} />
  </label>
  <button
    className="submit"
    type="submit">
    SUBMIT
  </button>
</form>
`;

exports[`RangeInput supports passing max/min values 1`] = `
<form
  className="root"
  onSubmit={[Function anonymous]}>
  <label
    className="labelMin">
    <input
      className="inputMin"
      onChange={[Function onChange]}
      type="number"
      value={0} />
  </label>
  <span
    className="separator">
    to
  </span>
  <label
    className="labelMax">
    <input
      className="inputMax"
      onChange={[Function onChange]}
      type="number"
      value={100} />
  </label>
  <button
    className="submit"
    type="submit">
    go
  </button>
</form>
`;
